# python-gate

./: .coverage  .gitignore  README.md  lefthook.yml  pyproject.toml  ruff.toml  vulture_whitelist.py
.claude/: CLAUDE.md
.github/workflows/: ci.yml  publish.yml
agentscore_gate/: __init__.py  _response.py  address.py  aiohttp.py  cache.py  client.py  django.py  fastapi.py  flask.py  middleware.py  sanic.py  sessions.py  signer.py  types.py
tests/: test_address.py  test_aiohttp.py  test_cache.py  test_client.py  test_django.py  test_edge_cases.py  test_fastapi.py  test_flask.py  test_integration.py  test_middleware.py  test_sanic.py  test_sessions.py  test_signer_match.py
