[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentscore-gate"
version = "1.6.0"
description = "Trust-gating middleware for Python web frameworks using AgentScore"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["agentscore", "middleware", "gate", "trust", "reputation", "x402", "erc-8004", "agent", "wallet", "blockchain", "ai-agent", "fastapi", "starlette", "flask", "django", "agentic-payments"]
dependencies = [
    "httpx>=0.25.0,<1.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
    "Framework :: Flask",
    "Framework :: Django",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
starlette = ["starlette>=0.27.0"]
fastapi = ["starlette>=0.27.0"]
flask = ["flask>=2.0.0"]
django = ["django>=4.0"]

[project.urls]
Homepage = "https://agentscore.sh"
Repository = "https://github.com/agentscore/python-gate"
Issues = "https://github.com/agentscore/python-gate/issues"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "vulture>=2.15",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
    "anyio[trio]>=4.0",
    "starlette>=0.27.0",
    "flask>=2.0.0",
    "django>=4.0",
    "pytest-cov>=6.0",
    "python-dotenv>=1.2.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=agentscore_gate --cov-report=term-missing --cov-fail-under=91"
